[package]
name = "rse-wasm"
description = "Distributed Network Disk web client Reed Solomon Erasuring WASM library"
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
authors = ["myl7 <myl@myl.moe>"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"

[dependencies]
reed-solomon-erasure = "5.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]

[features]
default = ["size"]
size = ["wee_alloc"]
debug = ["console_error_panic_hook"]
simd = ["reed-solomon-erasure/simd-accel"]
